fix mobile alignment

--- a/client/src/components/shared/Navigation/styles.scss
+++ b/client/src/components/shared/Navigation/styles.scss
@@ -54,6 +54,9 @@
     list-style-type: none;
     text-align: center;
     width: 100%;
+    &__mobile{
+      left: 45%;
+    }
   }
 
   &__item {
